test/compile_errors/binary_schema_lowercase_tform.zig
const fits = @import("zigfitsio");

comptime {
    _ = fits.BinarySchema(&.{
        .{ .name = "COUNT", .tform = "1j" },
    });
}
